Backend - new-group, my-chat, my-group, rename-group routes
